2006-04-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup):
	Prefer displaying the completion window above the entry rather than
	below. N#25361

2006-04-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkimage.c (animation_timeout): Remove optimization hack that
	breaks horribly on non-solid (white) backgrounds.

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS.

    2006-02-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_match_selected):
	Guard against NULL.  (#330177, Raphael Slinckx)

    2006-01-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c: Be more careful when blocking signals.

    2005-09-13  Matthias Clasen  <mclasen@redhat.com>

	* tests/testentrycompletion.c (create_simple_completion_model): Add
	some strings containing multibyte characters.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_real_insert_prefix):
	Fix prefix insertion for multibyte characters.  (#316095,
	Tommi Komulainen)

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): Add
	constraints to keep the completion popup inside the screen similar to
	comboboxes.
	* gtk/gtkcombobox.c: Add note about gtkentrycompletion

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkcombobox.c (:minimum-width, gtk_combo_box_size_request):
	Introduce minimum-width style property.
	* gtk/gtkcombobox.c (gtk_combo_box_set_popup_widget,
	gtk_combo_box_list_setup): Make sure the hildon-modified frame gets
	zero border-width.
	* gtk/gtkcombobox.c (gtk_combo_box_list_position): Never use horizontal
	scrollbars.
	IMP-10

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_enter_text): Handle position=-1 return
	value from gtk_editable_insert_text() in a special and don't move the